# skill-ninja

./: .gitignore  LICENSE  README.md  agent-skills-reference.md  pyproject.toml
scripts/: mcp_client_check.py  mcp_http_check.py  smoke_test.py  smoke_test_phase2.py  smoke_test_phase3.py
src/skill_ninja/: __init__.py  __main__.py  catalog.py  config.py  models.py  server.py
src/skill_ninja/index/: __init__.py  parser.py  validation.py
src/skill_ninja/search/: __init__.py  fts.py  hybrid.py  semantic.py
src/skill_ninja/sources/: __init__.py  base.py  git.py  github.py  local.py
src/skill_ninja/storage/: __init__.py  db.py
tests/: test_local_adapter.py  test_parser.py  test_search.py  test_semantic.py  test_source_mgmt.py  test_validation.py
