[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-ninja"
version = "0.1.0"
description = "MCP server that gives any AI agent just-in-time Agent Skills via semantic/lexical search over a federated catalog."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Humberto Zambrano", email = "elhumbertoz@gmail.com" }]
keywords = ["mcp", "agent-skills", "skills", "llm", "ai-agent", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
# Opt-in semantic search backend (Phase 3). Not required for the lexical default.
# Brute-force cosine over the small catalog (numpy) — no sqlite-vec / native ext.
semantic = ["fastembed>=0.3", "numpy>=1.26"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
skill-ninja = "skill_ninja.__main__:main"

[project.urls]
Homepage = "https://github.com/elhumbertoz/skill-ninja"
Repository = "https://github.com/elhumbertoz/skill-ninja"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_ninja"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
